<resources>
    <string name="app_name">My Money Platform</string>

    <!-- Strings related to login -->
    <string name="login_title">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_log_in">Log In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to Dashboard -->
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="txt_action_plan">Action Plan</string>
    <string name="txt_action_plan_score">Your financial health score is</string>

    <!-- Navigator Drawer Strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_module_title">MODULES</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_income">Income</string>
    <string name="nav_pension">Pension</string>
    <string name="nav_assetsdebts">Assets/Debts</string>
    <string name="nav_goals">Goals</string>
    <string name="nav_life">Life</string>
    <string name="nav_spending">Spendigs</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_help">Help</string>
    <string name="nav_logout">Log Out</string>

    <!-- CardView Title Strings -->
    <string name="cv_title_income">Income</string>
    <string name="cv_title_pension">Pension</string>
    <string name="cv_title_goals">Goals</string>
    <string name="cv_title_assets_debts">Assets/Debts</string>
    <string name="cv_title_life">Life</string>
    <string name="cv_title_spending">Spending</string>
    <string name="cv_title_action_plan">Action Plan</string>

    <!-- CardView Subtitle Strings -->
    <string name="cv_subtitle_income">Income Cover</string>
    <string name="cv_subtitle_pension">Pension in retirement</string>
    <string name="cv_subtitle_goals">Total savings required</string>
    <string name="cv_subtitle_assets_debts">Asset-Debt</string>
    <string name="cv_subtitle_life">Life cover shortfall</string>
    <string name="cv_subtitle_spending">Disposable income</string>

    <!-- CardView HealthPanel Title Strings -->
    <string name="cv_hp_title_income">Income Health</string>
    <string name="cv_hp_title_pension">Pension Health</string>
    <string name="cv_hp_title_goals">Goal Health</string>
    <string name="cv_hp_title_assets_debts">Assets/Debts Health</string>
    <string name="cv_hp_title_life">Life Cover Health</string>
    <string name="cv_hp_title_spending">Goal Health</string>

    <!-- CardView HeathPanel State Strings -->
    <string name="cv_hp_state_poor">Poor</string>
    <string name="cv_hp_state_medium">Medium</string>
    <string name="cv_hp_state_good">Good</string>
    <string name="cv_hp_state_excellent">Excellent</string>

    <!-- Currency values -->
    <string name="euro">€</string>

    <!-- Register Activity String -->
    <string name="title_activity_register">Register</string>
    <string name="reg_name">Name</string>
    <string name="reg_email">Email</string>
    <string name="reg_password_hint">Password length should be at least 6 characters</string>
    <string name="reg_password">Password</string>
    <string name="reg_confirm_password">Confirm Password</string>
    <string name="reg_dateofbirth">Date of birth</string>
    <string name="reg_paymentFrecuency">Payment Frecuency</string>
    <string name="reg_region">Region</string>

    <!-- Profile Activity Strings -->
    <string name="title_activity_profile">Profile</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_dateofbirth">Date of Birth</string>
    <string name="profile_region">Region</string>
    <string name="profile_paymentFrecuency">Payment Frecuency</string>
    <string name="profile_button_modify">Modify</string>
    <string name="profile_button_save">Save</string>

    <!-- Income Activity Strings -->
    <string name="title_activity_income">Income</string>
    <string name="income_screen_basic_salary_title">Basic Salary</string>
    <string name="income_screen_additional_income_title">Additional Income</string>
    <string name="income_screen_family_status_title">Family Status</string>
    <string name="income_screen_bottom_title">Income Health</string>
    <string name="txt_income_screen_family_status_illness_cover">Do you have illness cover from your employer?</string>
    <string name="txt_income_screen_family_status_policy">Do you have private income protection policy?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="txt_income_screen_family_status_protect">Does this policy protect 75% of your income?</string>
    <string name="txt_income_screen_family_status_percentage">What percent of your salary does your policy cover?</string>
    <string name="income_screen_dependents_title">Dependents</string>
    <string name="income_screen_summary_title">Did you know?</string>
    <string name="income_screen_basic_salary_seekarc_text">Please drag the white knob to set your salary</string>

    <!-- Income Screen Information Dialogs -->
    <string name="info_dialog_title">Info</string>
    <string name="confirm">OK</string>
    <string name="income_screen_basic_salary_info">What money is coming in to the household from you (and your partner, if applicable)</string>
    <string name="income_screen_additional_income_info">What other income other than basic salary have you as an income?</string>
    <string name="income_screen_family_status_info">Have you protection measures in place in case you can\'t work?</string>
    <string name="income_screen_dependents_info">Are there dependents who rely on your income?</string>

    <!-- Pension Activity Strings -->
    <string name="title_activity_pension">Pension</string>
    <string name="txt_pension_screen_monthly_amount">Affordable monthly amount for pension?</string>
    <string name="txt_pension_screen_age_retirement">Preferred age of retirement?</string>
    <string name="txt_pension_screen_seekarc_amount_tip">Please, drag the white knob to set your monthly amount for pension</string>
    <string name="txt_pension_screen_seekarc_age_tip">Please, drag the white knob to set your age</string>
    <string name="txt_income_screen_dependents">How many dependents you have?</string>
    <string name="txt_pension_screen_summary_salary_title">Final salary from work vs pension</string>
    <string name="txt_pension_screen_graphs_title">Income in retirement</string>
    <string name="txt_pension_screen_existing_pension_title">Existing Pensions</string>

    <!-- Pension Screen Information Dialogs -->
    <string name="txt_pension_screen_existing_pension_info">Have you any pension funds already in place?</string>
    <string name="txt_pension_screen_age_retirement_info">Use this dial to run scenarios of retiring at different ages.</string>
    <string name="txt_pension_screen_monthly_amount_info">Use this dial to see how monthly payments could help you retire earlier and with more money.</string>
    <string name="txt_pension_screen_summary_salary_info">Having a good income in retirement is vital to maintaining your livelihood.</string>
    <string name="txt_pension_screen_graphs_info">You should have at least 50% of your work salary at the time of retirement as an income for the rest of your life</string>

    <!-- Goals Activity Strings -->
    <string name="title_activity_goals">Goals</string>
    <string name="goals_screen_bottom_title">Goal Health</string>
    <string name="txt_goals_screen_header_title">Goals</string>
    <string name="txt_goals_screen_secundary_goals_title">Secundary Goals</string>
    <string name="txt_goals_screen_rainy_day_title">Rainy Day Fund</string>
    <string name="txt_goals_screen_college_title">College Fund</string>
    <string name="txt_goals_screen_secundary_goals_content_hint">Create savings goals for yourself here.</string>
    <string name="txt_goals_screen_secundary_goals_content_add_goal_button">Add Goal</string>
    <string name="txt_goals_screen_rainy_day_content_hint">The total of your Rainy Day fund is 3 times your monthly Spending. You can edit the figures in the Spending tab later and come back to this.</string>
    <string name="txt_goals_screen_rainy_day_edit_button">Edit</string>
    <string name="txt_goals_screen_rainy_day_percent_title">Rainy Day Fund</string>
    <string name="txt_goals_screen_rainy_day_goal_title">Goal</string>
    <string name="txt_goals_screen_college_content_hint">Below is an estimated total of the cost of a 4 year college degree for your dependents.</string>
    <string name="txt_new_goal_progress_title">Goal:</string>

    <!-- Assets/Debts Activity Strings -->
    <string name="title_activity_assetsdebts">Assets/Debts</string>
    <string name="title_calculators">Calculators</string>
    <string name="health_panel_title_assets_debts">Assets vs Debts Health</string>
    <string name="title_assets_debts_list">Asset/Debt List</string>
    <string name="loan_calculator">Loan Calculator</string>
    <string name="mortage_calculator">Morgage Calculator</string>
    <string name="calculators_info">Calculators Info</string>
    <string name="assets_debts_screen_calculators_info">See how much the repayments would be on a loan/mortgage</string>
    <string name="assets_debts_screen_list_info">Enter all your Assets and Debts here to see if you are in the red or black at the end.</string>
    <string name="title_assets_vs_debts">Assets vs. Debts</string>
    <string name="txt_assetsdebts_screen_bottom_panel_title">Assets vs Debt Health</string>

</resources>
