<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mmp.mymoneyplatform_mobile_app.activity.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <!-- Name Input -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorFontRegistration">

                <AutoCompleteTextView
                    android:id="@+id/reg_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/reg_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <!-- Email Input -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorFontRegistration">

                <AutoCompleteTextView
                    android:id="@+id/reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/reg_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <!-- Password Hint -->
            <TextView
                android:id="@+id/reg_tv_pass_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="20dp"
                android:text="@string/reg_password_hint" />

            <!-- Password Input -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorFontRegistration">

                <EditText
                    android:id="@+id/reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/reg_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <!-- Confirm Password Input -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorFontRegistration">

                <EditText
                    android:id="@+id/reg_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/reg_confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <!-- Date of Birth input -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_register_dateofbirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColorHint="@color/colorFontRegistration">

                <EditText
                    android:id="@+id/reg_dateofbirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:focusable="false"
                    android:hint="@string/reg_dateofbirth"
                    android:inputType="date"
                    android:maxLines="1"
                    android:onClick="setDate"
                    android:singleLine="true"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <!-- Payment Frecuency Spinner -->
            <RelativeLayout
                android:id="@+id/lay_frecuency_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lay_register_dateofbirth"
                android:layout_marginLeft="@dimen/profile_horizontal_spacing"
                android:layout_marginRight="@dimen/profile_horizontal_spacing"
                android:layout_marginTop="@dimen/profile_vertical_spacing">

                <TextView
                    android:id="@+id/tv_register_payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:text="@string/reg_paymentFrecuency"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/profile_text_size" />

                <Spinner
                    android:id="@+id/sp_payment_frecuency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp" />

            </RelativeLayout>

            <!-- TODO: make the parent layout for the region spinner, like the payment frecuency spinner -->
            <RelativeLayout
                android:id="@+id/lay_register_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lay_frecuency_payment"
                android:layout_marginLeft="@dimen/profile_horizontal_spacing"
                android:layout_marginRight="@dimen/profile_horizontal_spacing"
                android:layout_marginTop="@dimen/profile_vertical_spacing">

                <TextView
                    android:id="@+id/tv_register_region"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:text="@string/reg_paymentFrecuency"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/profile_text_size" />

                <Spinner
                    android:id="@+id/sp_region"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp" />
            </RelativeLayout>

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_background_drawable"
                android:text="Sign In"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
